RESOLVED FIXED203660
[LFC][IFC] Line::Run should not hold a reference to InlineItem
https://bugs.webkit.org/show_bug.cgi?id=203660
Summary [LFC][IFC] Line::Run should not hold a reference to InlineItem
alan
Reported 2019-10-30 21:20:28 PDT
It can end up with multiple InlineItems after merge
Attachments
Patch (5.58 KB, patch)
2019-10-30 21:47 PDT, alan
no flags
Patch (5.58 KB, patch)
2019-10-31 08:42 PDT, alan
no flags
Radar WebKit Bug Importer
Comment 1 2019-10-30 21:22:12 PDT
alan
Comment 2 2019-10-30 21:47:53 PDT
alan
Comment 3 2019-10-31 08:42:23 PDT
WebKit Commit Bot
Comment 4 2019-10-31 09:01:32 PDT
Comment on attachment 382464 [details] Patch Clearing flags on attachment: 382464 Committed r251851: <https://trac.webkit.org/changeset/251851>
WebKit Commit Bot
Comment 5 2019-10-31 09:01:34 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.